--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -3,17 +3,20 @@
     <div class="task-overlay-content">
       <div class="header">
         <span class="category">Technical Task</span>
-        <button class="close-btn"></button>
+        <button class="close-btn">
+          <img src="assets/img/icons/close.svg" alt="Close" />
+        </button>
       </div>
 
       <h1>CSS Architecture Planning</h1>
       <p class="description">Define CSS naming conventions and structure.</p>
 
       <div class="info">
-        <p>Due date: 19/02/2024</p>
-        <br />
-        <p>Priority: Medium <span class="priority-icon"></span></p>
+        <p><span class="label">Due date:</span> <span class="value">19/02/2024</span></p>
+        <br>
+        <p><span class="label">Priority:</span> <span class="value">Medium</span> <span class="priority-icon"></span></p>
       </div>
+      
 
       <div class="assigned-to">
         <p>Assigned To:</p>
@@ -31,14 +34,11 @@
 
       <div class="subtasks">
         <p>Subtasks</p>
-
         <div class="subtask">
-          <span class="subtask-icon">
-            <img
-              src="assets/img/icons/check_button_checked.svg"
-              alt="Completed Task"
-            />
-          </span>
+          <img
+            src="assets/img/icons/check_button_checked.svg"
+            alt="Completed Task"
+          />
           <span class="subtask-text">Setup base styles</span>
         </div>
       </div>
