--- a/src/app/main/content/contacts/overlay/overlay.component.scss
+++ b/src/app/main/content/contacts/overlay/overlay.component.scss
@@ -190,7 +190,7 @@
   border-radius: 50%;
 
   &:hover {
-    background: #f1f1f1;
+    background: $mid_gray;
   }
 }
 
@@ -243,7 +243,7 @@ p {
 .error-message {
   font-size: 12px;
   margin-top: -6px;
-  color: red;
+  color: $red_light;
   transition: opacity 0.3s ease-in-out;
 }
 
@@ -270,7 +270,7 @@ p {
 }
 
 .cancel-btn {
-  border: 1px solid black;
+  border: 1px solid $black;
   background-color: $white;
 
   &:hover {
@@ -287,7 +287,7 @@ p {
 
 .create-btn {
   background: $dark_blue;
-  color: white;
+  color: $white;
   white-space: nowrap;
 
   &:hover {
