--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -29,9 +29,16 @@
     height: 800px;
 
     @media (max-width: 580px) {
-      width: 400px;
-      height: 600px;
+      width: 85%;
+      height: 70%;
+      padding: 24px;
     }
+
+    @media (max-width: 480px) {
+      height: 50%;
+      padding: 16px;
+    }
+
 
     .header {
       @include dFlex($jc: space-between);
@@ -53,6 +60,11 @@
         background: none;
         border: none;
         cursor: pointer;
+        border-radius: 50%;
+
+        &:hover {
+          background: $mid_gray;
+        }
       }
     }
 
@@ -96,16 +108,25 @@
     }
 
     .subtask {
-      margin-top: 16px;
+      margin-top: 8px;
+      border-radius: 16px;
+      padding: 0px 8px; 
+      line-height: 1.8; 
 
       img {
         position: relative;
         top: 6px;
       }
+
+      &:hover {
+        background-color: $mid_gray;
+      }
     }
 
     .subtask-text {
       margin-left: 10px;
+      @include font($ff: "Inter", $fs: clamp(12px, 3vw, 16px), $fw: 400);
+
     }
 
     .actions-buttons {
@@ -133,7 +154,7 @@
       }
 
       .divider {
-        width: 2px;
+        width: 1px;
         height: 26px;
         background-color: $mid_gray;
       }
