--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -102,6 +102,18 @@ h2 {
 .board_content_header {
     @include dFlex($jc: space-between);
     width: 100%;
+
+    >button {
+        height: 25px;
+        width: 24px;
+        background-image: url('./../../../../assets/img/icons/add_task_plus.svg');
+        background-repeat: none;
+        border: none;
+        &:hover {
+            background-image: url('./../../../../assets/img/icons/add_task_plus_hover.svg');
+            cursor: pointer;
+        }
+    }
 }
 
 .to_do {
@@ -141,6 +153,7 @@ h2 {
 }
 
 .empty_bg {
+    margin-top: 24px;
     min-height: 48px;
     width: 100%;
     background: $mid_gray;
@@ -151,13 +164,11 @@ h2 {
     overflow: auto;
 }
 
-/* Hard coded example task card */
-
 h3 {
     @include font($fs: 16px, $fw: 700);
 }
 
-/* drag and drop */
+/* drag & drop cards */
 
 .example-container {
     width: 400px;
@@ -165,55 +176,143 @@ h3 {
     margin: 0 25px 25px 0;
     display: inline-block;
     vertical-align: top;
-  }
+}
   
-  .example-list {
-    @include dFlex($ai: flex-start, $jc: center, $g: 10px);
-    flex-direction: column;
-    // border: solid 1px #ccc;
-    min-height: 60px;
-    width: 100%;
-    border-radius: 4px;
-  }
+.example-list {
+@include dFlex($ai: flex-start, $jc: center, $g: 10px);
+flex-direction: column;
+// border: solid 1px #ccc;
+min-height: 60px;
+width: 100%;
+border-radius: 4px;
+}
   
-  .example-box {
-    width: 100%;
-    min-height: 160px;
-    padding: 20px 10px;
+.example-box {
+@include dFlex($ai: flex-start, $jc: center, $g: 16px);
+flex-direction: column;
+width: 100%;
+min-height: 160px;
+max-height: 256px;
+padding: 16px;
     
-    // border-bottom: solid 1px #ccc;
-    border-radius: 10px;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: white;
-    font-size: 14px;
-  }
+// border-bottom: solid 1px #ccc;
+border-radius: 10px;
+color: rgba(0, 0, 0, 0.87);
+// display: flex;
+// flex-direction: row;
+// align-items: center;
+// justify-content: space-between;
+box-sizing: border-box;
+cursor: move;
+background: white;
+font-size: 14px;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.task_card_category {
+@include font($fs: 16px, $fw: 400);
+height: 27px;
+min-height: 27px;
+width: 128px;
+border-radius: 8px;
+background-color: $blue_deep; // dynamic color change by category needed!
+text-align: center;
+align-content: center;
+color: $white; 
+}
+
+.task_card_main {
+overflow-y: scroll;
+overflow-wrap: wrap;
+max-height: 84px;
+}
   
-  .cdk-drag-preview {
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
+.task_card_substasks {
+@include font($fs: 12px, $fw: 400);
+@include dFlex($ai: center, $jc: space-between);
+width: 100%;
+}
+
+.subtasks_progress {
+max-width: 128px;
+}
+
+.progress_outer {
+width: 100%;
+>.progress_inner {
+    width: 50%;
+    background-color: $blue_lavender;
+    }
+}
+
+.task_card_team {
+    @include dFlex($ai: center, $jc: space-between);
+    height: 32px;
+    width: 100%;
+}
+
+.team_left {
+    @include dFlex($ai: center, $jc: space-between);
+    >.initials_icon1 {
+        @include font($fs: 12px, $fw: 400);
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        border: 2px solid $white;
+        background-color: $purple;
+        color: $white;
+        text-align: center;
+        align-content: center;
+    }
+    >.initials_icon2 {
+        @include font($fs: 12px, $fw: 400);
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        border: 2px solid $white;
+        background-color: $pink_soft;
+        color: $white;
+        text-align: center;
+        align-content: center;
+        margin-left: -8px;
+    }
+    >.initials_icon3 {
+        @include font($fs: 12px, $fw: 400);
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        border: 2px solid $white;
+        background-color: $yellow_gold;
+        color: $white;
+        text-align: center;
+        align-content: center;
+        margin-left: -8px;
+
+    }
+}
+
+.cdk-drag-preview {
+box-sizing: border-box;
+border-radius: 4px;
+box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+            0 8px 10px 1px rgba(0, 0, 0, 0.14),
+            0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
   
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
+.cdk-drag-placeholder {
+opacity: 0;
+}
   
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
+.cdk-drag-animating {
+transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
   
-  .example-box:last-child {
-    border: none;
-  }
+.example-box:last-child {
+border: none;
+}
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
