--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
 <section>
   <div class="task-overlay">
     <div class="task-overlay-content">
@@ -57,4 +57,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
