board search input and button minor styling

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -5,12 +5,15 @@
     </div>
     <div class="board_header_right">
       <div class="input_field">
-        <input type="text" placeholder="Find task..">
+        <input type="text" placeholder="Find task">
         <img src="./assets/img/icons/search_icon.svg" alt="">
       </div>
       <button (click)="get()">TEST</button>
-      <button class="add_task_btn">Add task</button>
-    </div>
+      <button class="add_task_btn">
+        Add task
+        <img src="assets/img/icons/plus_icon.svg" alt="Add Task Icon" class="plus-icon">
+      </button>
+          </div>
   </div>
   <div class="board_content">
       <div class="to_do" >
