--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -21,13 +21,14 @@ section {
     border-width: 1px;
     background-color: $white;
     padding: 8px;
+    cursor: pointer;
 
     >img {
         padding-left: 16px;
         margin-right: 16px;
         height: 32px;
         width: 32px;
-        border-left: 2px solid $light_gray;
+        border-left: 1px solid $light_gray;
     }
 }
 
@@ -36,6 +37,7 @@ input {
     width: 100%;
     border: none;
     background-color: transparent;
+    cursor: pointer;
 }
 
 input::placeholder {
@@ -50,14 +52,21 @@ input::placeholder {
 
 .add_task_btn {
     @include font($fs: 24px, $fw: 700);
-    @include dFlex($ai: center, $jc: space-between);
+    @include dFlex($ai: center, $jc: space-evenly);
     height: 48px;
-    width: 160px;
+    width: 170px;
     margin-left: 32px;
     border-radius: 10px;
     color: $white;
+    border: none;
     background-color: $dark_blue;
     padding-left: 16px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: $light_blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
 }
 
 h1 {
